<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="RegisterNumber">Register your number</string>
    <string name="app_name">Voice Changer Allogag</string>
    <string name="buycredits">Buy credits</string>
    <string name="cancel">Cancel</string>
    <string name="checkconnection">Check your Internet connection or try to connect to another Internet network</string>
    <string name="chooseBackNoise">Choose a background noise</string>
    <string name="coinsnotif" formatted="false">"Congratulations! You’ve earned %.0f %s! 
(60 credits = 1 minute)"</string>
    <string name="contact_us">Contact us</string>
    <string name="coupon">Coupon</string>
    <string name="credits">seconds</string>
    <string name="dgts__call_me">Call me</string>
    <string name="dgts__calling">Calling…</string>
    <string name="dgts__confirmation_code">Confirmation code</string>
    <string name="dgts__confirmation_edit_hint">Enter the 6-digit code we sent you</string>
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <string name="dgts__continue">Continue</string>
    <string name="dgts__create_account">Create account</string>
    <string name="dgts__digits_logo_desc">digits logo icon</string>
    <string name="dgts__digits_logo_name_desc">digits logo name</string>
    <string name="dgts__dismiss">Dismiss</string>
    <string name="dgts__done">Done</string>
    <string name="dgts__email_request_edit_hint">Email address</string>
    <string name="dgts__email_request_title">Enter email address</string>
    <string name="dgts__find_your_friends">Find your friends</string>
    <string name="dgts__image_header_description">Image header for login</string>
    <string name="dgts__invalid_email">Invalid Email. Try Again</string>
    <string name="dgts__invite_no_session_warning">Digits warning: No active session found. An active session is required to fetch contact matches, store/retrieve invitedPhoneNumbers. Log the user in to have the full experience.</string>
    <string name="dgts__invite_post">Invited</string>
    <string name="dgts__invite_pre">Invite</string>
    <string name="dgts__invite_sms">Hi %1$s. I am using %2$s - Join me!</string>
    <string name="dgts__invite_to_appname">Invite to %1$s</string>
    <string name="dgts__login_digits_text">Use my phone number</string>
    <string name="dgts__network_error">Please check your network and try again.</string>
    <string name="dgts__not_now">Not now</string>
    <string name="dgts__okay">Okay</string>
    <string name="dgts__phone_number_edit_hint">Your Number</string>
    <string name="dgts__phone_number_text">Enter your phone number</string>
    <string name="dgts__pin_code_verification_title">Enter 2-step verification code</string>
    <string name="dgts__resend_confirmation_button_code">Resend code</string>
    <string name="dgts__send_confirmation_code">Send confirmation code</string>
    <string name="dgts__sending">Sending…</string>
    <string name="dgts__success_desc">Success Icon</string>
    <string name="dgts__terms_email_request">By tapping %1$sContinue%1$s above, you are adding this email to your Digits account. You agree that this app and %7$sall apps listed in your Digits account%5$s can access this email address and their users can discover you by email.</string>
    <string name="dgts__terms_text">By tapping %1$sSend confirmation code%1$s above, %6$sDigits by Twitter%5$s will send you an SMS to confirm your phone number. On the next screen, you can choose “Resend code” to receive a new SMS or “Call me” to initiate a phone call to confirm your phone number. Message, call &amp; data rates may apply.</string>
    <string name="dgts__terms_text_call_me">By tapping %1$sCall me%1$s above, %6$sDigits by Twitter%5$s will send you a voice call to confirm your phone number. Call &amp; data rates may apply.</string>
    <string name="dgts__terms_text_create">By tapping %1$sCreate account%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your phone number with %4$s, and that other users of %4$s can discover you by phone number.</string>
    <string name="dgts__terms_text_sign_in">By tapping %1$sContinue%1$s above, your %7$sDigits phone number and/or email address%5$s will be shared with %4$s and other users of %4$s can discover you by phone number and/or email.</string>
    <string name="dgts__terms_text_updated">By tapping %1$sContinue%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your %7$sDigits phone number and/or email address%5$s with %4$s, and other users of %4$s can discover you by phone number and/or email.</string>
    <string name="dgts__try_again">Try Again</string>
    <string name="dgts__try_again_confirmation">Please check your code and try again.</string>
    <string name="dgts__try_again_email">Please check your email and try again</string>
    <string name="dgts__try_again_phone_number">Please check your number and try again.</string>
    <string name="dgts__try_another_phone">Try a different phone number</string>
    <string name="dgts__unsupported_operator_error">Unable to send this number an SMS message.</string>
    <string name="dgts__upload_contacts">"We use Digits by Twitter to find more of your friends who use this app. When you tap Okay, we'll upload your address book to Digits by Twitter so that we can help you find users of %1$s that you know or help other users of %1$s find you."</string>
    <string name="dgts__verification_code">Verification code</string>
    <string name="dgts_pin_code_terms">You have previously set a 2-step verification code on digits.com</string>
    <string name="hide_my_phonenumber">Hide my phone number</string>
    <string name="higher">Higher</string>
    <string name="invalidphonenumber">Invalid phone number !</string>
    <string name="invalidphonenumbertext">The number to call is not correct or unauthorized ! Please try another number.</string>
    <string name="labelcreditsremaining">Credits remaining:</string>
    <string name="like_appli">Follow us</string>
    <string name="lower">Lower</string>
    <string name="menu_mynumber">My number</string>
    <string name="menu_terms">Help</string>
    <string name="minutes">minutes</string>
    <string name="normal">Normal</string>
    <string name="novoip">Warning: some carriers or networks block calls over the Internet. Try connecting to another network.</string>
    <string name="numero_a_pieger">Number to call</string>
    <string name="obtaincredit">You must obtain credit to call someone with the Voice Changer</string>
    <string name="offres">Complete an offer</string>
    <string name="ok">OK</string>
    <string name="poorcnx">Your internet connexion is too slow to make calls. Try again with a better Internet network</string>
    <string name="regle_ta_voix">Select your voice</string>
    <string name="share">Share</string>
    <string name="share_app">Share the app and try to win free minutes. 100 minutes to win each day!!!</string>
    <string name="share_txt">Download Voice Changer Allogag and make free prank calls !</string>
    <string name="sondage">Complete a survey</string>
    <string name="soundoff">Warning : the volume is muted</string>
    <string name="tab1">Voice Changer</string>
    <string name="tab2">Credits</string>
    <string name="tab3">Background noises</string>
    <string name="ton_numero">Your phone number</string>
    <string name="tw__allow_btn_txt">Allow</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__not_now_btn_txt">Not now</string>
    <string name="tw__share_email_desc">Allow %1$s to access the email address associated with your Twitter account @%2$s so that %1$s can use it according to its privacy policy. For example, %1$s could send you updates and other information at that address.</string>
    <string name="tw__share_email_title">Share your email address</string>
    <string name="wait">Wait...</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="menu_myjokes">My Pranks</string>
    <string name="txtRegisterNumber">In compliance with Google Play’s policy, you cannot display as caller ID a phone number that is not yours.</string>
</resources>