<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/colorOrange" android:gravity="center_horizontal" android:layout_gravity="center|top" android:id="@id/titleVc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/regle_ta_voix" />
    <SeekBar android:layout_gravity="center_horizontal" android:id="@id/seekBar" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:max="15" android:progress="8" android:indeterminate="false" android:thumb="@drawable/seek_thumb_large" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip">
        <Button android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" android:textColor="@color/colorOrange" android:id="@id/buttonGrave" android:background="@android:drawable/menuitem_background" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lower" android:drawableTop="@drawable/selgrave" />
        <Button android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" android:textColor="@color/colorOrange" android:id="@id/buttonNormal" android:background="@android:drawable/menuitem_background" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/normal" android:drawableTop="@drawable/selnormal" />
        <Button android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" android:textColor="@color/colorOrange" android:id="@id/buttonAigu" android:background="@android:drawable/menuitem_background" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/higher" android:drawableTop="@drawable/selaigu" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:textAppearance="?android:textAppearanceButton" android:layout_gravity="center_vertical" android:id="@id/buttonPlay" android:background="@drawable/round_button_orange" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:tint="@color/colorOrange" app:srcCompat="@drawable/ic_play_arrow_white_24dp" />
        <ImageButton android:textAppearance="?android:textAppearanceButton" android:layout_gravity="center_horizontal" android:id="@id/buttonTestVoice" android:background="@drawable/round_button" android:layout_width="70.0dip" android:layout_height="70.0dip" android:src="@drawable/ic_mic_white_24dp" />
        <ImageButton android:textAppearance="?android:textAppearanceButton" android:layout_gravity="center_vertical" android:id="@id/buttonShare" android:background="@drawable/round_button_orange" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="15.0dip" android:tint="@color/colorOrange" app:srcCompat="@drawable/ic_share_black_24dp" />
    </LinearLayout>
</LinearLayout>